# inventario_api

inventario_api/: Cargo.toml
inventario_api/config/: development.yaml
inventario_api/migrations/: 20251215195704_init.down.sql
inventario_api/src/: app.rs  context.rs  lib.rs
inventario_api/src/config/: db.rs  log.rs  mod.rs
inventario_api/src/controllers/: auth.rs
inventario_api/src/error/: mod.rs
inventario_api/src/middlewares/: auth.rs  error.rs  mod.rs  refresh.rs  trace.rs
inventario_api/src/models/: error.rs  mod.rs  token.rs  users.rs
podman/: containers.md  containers.txt
